<resources>
    <string name="app_name">heed_music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_image_description">Profile Image</string>
    <string name="recently_played">Recently Played</string>
    <string name="sounds_like_recently_listened_to">Sounds Like Recently Played</string>
    <string name="todays_hits">Today\'s Hits</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="image">image</string>
    <string name="recently_searched">Recently searched:</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="artists">Artists</string>
    <string name="recently_added">Recently Added</string>
    <string name="play">Play</string>
    <string name="shuffle">Shuffle</string>
    <string name="search_results">Search Results:</string>
</resources>