<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="homeViewModel"
            type="din.heed_music.HomeViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        tools:context="din.heed_music.HomeFragment"
        android:background="@color/Midnight_Blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/homeFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_page_header"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/img_profile"

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_img"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/profile_image_description" />

                <TextView
                    android:id="@+id/txt_welcome"
                    android:text="@string/welcome_back"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toEndOf="@+id/img_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_profile_name"
                    tools:text="Dauren"
                    android:text="@{homeViewModel.name}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:layout_constraintStart_toEndOf="@+id/txt_welcome"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_recently_played"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/txt_title_recently"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/recently_played"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_carousel_recently"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:layout_marginTop="10dp"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_recently"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_sounds_like_recently_played"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="20dp">


                <TextView
                    android:id="@+id/txt_title_sounds_like_recently"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/sounds_like_recently_listened_to"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_carousel_sounds_like_recently"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:layout_marginTop="10dp"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_sounds_like_recently"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_todays_hits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:layout_marginBottom="20dp">
                <TextView
                    android:id="@+id/txt_title_todays_hits"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:text="@string/todays_hits"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_carousel_todays_hits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="horizontal"
                    android:layout_marginTop="10dp"
                    app:layoutManager="LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_todays_hits"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>
