<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/libraryMainFragment">

    <data>
        <variable
            name="lib_main_viewModel"
            type="din.library.main.LibraryMainViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/Midnight_Blue"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_3"
            android:paddingEnd="@dimen/padding_3"
            android:paddingTop="@dimen/padding_2"
            android:paddingBottom="@dimen/padding_4">
            <TextView
                android:id="@+id/txt_title_library"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/library"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size_2"
                android:textStyle="bold"
                />

            <!--            TABS-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tab_playlists"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_height"
                android:background="@drawable/bg_bottom_line"
                android:paddingEnd="@dimen/padding_2">
                <ImageView
                    android:id="@+id/ic_tab_playlists"
                    android:layout_width="@dimen/icon_size_2"
                    android:layout_height="@dimen/icon_size_2"
                    android:background="@drawable/ic_library_playlists"
                    android:contentDescription="tab icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2"
                    android:text="@string/playlists"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tab_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_tab_playlists"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_width="@dimen/icon_size_1"
                    android:layout_height="@dimen/icon_size_1"
                    android:background="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tab_artists"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_height"
                android:background="@drawable/bg_bottom_line"
                android:paddingEnd="@dimen/padding_2"
                android:onClick="@{()-> lib_main_viewModel.onSelectingSection(1)}">
                <ImageView
                    android:id="@+id/ic_tab_artists"
                    android:layout_width="@dimen/icon_size_2"
                    android:layout_height="@dimen/icon_size_2"
                    android:background="@drawable/ic_library_artists"
                    android:contentDescription="tab icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2"
                    android:text="@string/artists"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tab_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_tab_artists"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_width="@dimen/icon_size_1"
                    android:layout_height="@dimen/icon_size_1"
                    android:background="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tab_albums"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_height"
                android:background="@drawable/bg_bottom_line"
                android:paddingEnd="@dimen/padding_2"
                android:onClick="@{()-> lib_main_viewModel.onSelectingSection(2)}">
                <ImageView
                    android:id="@+id/ic_tab_albums"
                    android:layout_width="@dimen/icon_size_2"
                    android:layout_height="@dimen/icon_size_2"
                    android:background="@drawable/ic_library_albums"
                    android:contentDescription="tab icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2"
                    android:text="@string/albums"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tab_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_tab_albums"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_width="@dimen/icon_size_1"
                    android:layout_height="@dimen/icon_size_1"
                    android:background="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/tab_songs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tab_height"
                android:background="@drawable/bg_bottom_line"
                android:paddingEnd="@dimen/padding_2"
                android:onClick="@{()-> lib_main_viewModel.onSelectingSection(3)}">
                <ImageView
                    android:id="@+id/ic_tab_songs"
                    android:layout_width="@dimen/icon_size_2"
                    android:layout_height="@dimen/icon_size_2"
                    android:background="@drawable/ic_music_note"
                    android:contentDescription="tab icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_2"
                    android:text="@string/songs"
                    android:textColor="@color/white"
                    android:textSize="@dimen/tab_text_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ic_tab_songs"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_width="@dimen/icon_size_1"
                    android:layout_height="@dimen/icon_size_1"
                    android:background="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txt_title_recently_added"
                android:paddingTop="@dimen/padding_1"
                android:paddingBottom="@dimen/padding_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_1"
                android:text="@string/recently_added"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size_1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recently_added"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/margin_1"
                android:nestedScrollingEnabled="false"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="6"
                tools:listitem="@layout/song_card_item" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</layout>