<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="lib_albums_viewmodel"
            type="din.library.albums.LibraryAlbumsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Midnight_Blue"
        android:paddingTop="@dimen/padding_2"
        android:paddingStart="@dimen/padding_2"
        android:paddingEnd="@dimen/padding_2"
        android:orientation="vertical"
        tools:context=".library.albums.LibraryAlbumsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/section_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:onClick="@{() -> lib_albums_viewmodel.navigateBackToLibrary()}"
                android:layout_width="@dimen/icon_size_3"
                android:layout_height="@dimen/icon_size_3"
                app:flow_verticalBias="0.5"
                android:background="@drawable/arrow_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_title"
                app:layout_constraintBottom_toBottomOf="@id/txt_title" />

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/albums"
                android:textSize="@dimen/title_text_size_3"
                android:textColor="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/play_shuffle_btns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/section_header"
            android:layout_marginTop="@dimen/margin_2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:layout_marginEnd="@dimen/margin_1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Indigo"
                    android:padding="@dimen/padding_1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play"
                        android:textSize="18sp"
                        android:textColor="@color/purple_200"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:layout_marginStart="@dimen/margin_1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/Indigo"
                    android:padding="@dimen/padding_1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shuffle"
                        android:textSize="18sp"
                        android:textColor="@color/purple_200"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_lib_albums"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_2"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            android:orientation="vertical"
            tools:itemCount="20"
            tools:listitem="@layout/song_card_item" />
    </LinearLayout>
</layout>